kubernetes/overlays/dev/middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
    name: strip-prefix-web

spec:
    stripPrefix:
        prefixes:
            - /assets
---
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
    name: errors-shared-web

spec:
    errors:
        status:
            - "400"
            - "401"
            - "403"
            - "404"
            - "500"
            - "502"
            - "503"
            - "504"
        query: /errors/{status}?service=assets-web
        service:
            name: shared-web-v1
            namespace: sweetrpg-shared
            port:
                name: http
